[gd_scene load_steps=11 format=3 uid="uid://wmarh2nq5s4j"]

[ext_resource type="Script" path="res://entities/Neutrals/Hubbedo/hubbedo.gd" id="1_1y0d1"]
[ext_resource type="Texture2D" uid="uid://c6g7knelun0ng" path="res://assets/shared/scribbledae_new_tiles_singles.png" id="1_t8cbk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r1raj"]
atlas = ExtResource("1_t8cbk")
region = Rect2(192, 32, 64, 64)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bfqkc"]
radius = 45.0
height = 90.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_av2h6"]
size = Vector2(43.5, 13)

[sub_resource type="Animation" id="Animation_mqgct"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSmall/FaceSpriteSmall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_wwu7w"]
resource_name = "angry_face"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSmall/FaceSpriteSmall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_6s5ig"]
resource_name = "happy_face"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSmall/FaceSpriteSmall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_7sb1j"]
resource_name = "neutral_face"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSmall/FaceSpriteSmall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_blswf"]
_data = {
"RESET": SubResource("Animation_mqgct"),
"angry_face": SubResource("Animation_wwu7w"),
"happy_face": SubResource("Animation_6s5ig"),
"neutral_face": SubResource("Animation_7sb1j")
}

[node name="Hubbedo" type="AnimatableBody2D"]
collision_layer = 2
script = ExtResource("1_1y0d1")

[node name="SpriteBig" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -32)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_r1raj")

[node name="FaceSpriteBig" type="Sprite2D" parent="SpriteBig"]
position = Vector2(-16, 16)
texture = ExtResource("1_t8cbk")
hframes = 8
vframes = 3
frame = 16

[node name="SpriteSmall" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_r1raj")

[node name="FaceSpriteSmall" type="Sprite2D" parent="SpriteSmall"]
position = Vector2(-16, 16)
texture = ExtResource("1_t8cbk")
hframes = 8
vframes = 3
frame = 16

[node name="ColBig" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(16, -20)
shape = SubResource("CapsuleShape2D_bfqkc")
disabled = true

[node name="ColSmall" type="CollisionShape2D" parent="."]
position = Vector2(7.25, -4.5)
shape = SubResource("RectangleShape2D_av2h6")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(9, -21)
polygon = PackedVector2Array(-23, 2, -23, 9, 19, 9, 19, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_blswf")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
